--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "@trpc/server": "^11.0.0-rc.446",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "fetch": "^1.1.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.441.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
+    "node": "^22.8.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
