babel config removed

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
+    "@babel/preset-typescript": "^7.24.7",
     "@types/eslint": "^8.56.10",
     "@types/jest": "^29.5.13",
     "@types/node": "^20.14.10",
